# TrialMatch-AI

./: .gitignore  package-lock.json  patient.txt
backend/: .dockerignore  dockerfile  main.py  pyproject.toml
backend/app/agents/: eligibility_agent.py  explanation_agent.py  graph.py  intake_agent.py  profile_agent.py  trial_agent.py
backend/app/api/: chat.py  upload.py
backend/app/db/: database.py  models.py
backend/app/rag/: ingest.py  retriever.py
backend/app/services/: chat_service.py  eligibility_matcher.py  explainer.py  extract_text.py  llm_extractor.py  trial_search.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/upload/: page.tsx
frontend/components/: AuthForm.tsx  Hero.tsx  Navbar.tsx  UploadCard.tsx
